tracticketfieldslayoutplugin/0.12/tracticketfieldslayout/htdocs/web_ui.css
#properties table { table-layout: fixed }
#ticket table.properties .ticketfieldslayout-toggle td,
#properties .ticketfieldslayout-toggle td {
 width: 100%;
 padding: 0;
}
#ticket table.properties .ticketfieldslayout-toggle td fieldset,
#properties .ticketfieldslayout-toggle td fieldset {
 margin: 0;
 padding: 0;
 border: none;
 background: transparent none;
 box-shadow: none;
}
#ticket table.properties .ticketfieldslayout-toggle td legend {
 font-size: 90.9%;
 padding-top: 0.5em;
 padding-bottom: 0.5em;
}
#properties .ticketfieldslayout-toggle td legend {
 font-size: 90.9%;
 padding-top: 0.4em;
 padding-bottom: 0.4em;
}
#ticket table.properties .ticketfieldslayout-toggle td .collapsed legend.foldable,
#properties .ticketfieldslayout-toggle td .collapsed legend.foldable {
 background: transparent;
}
.ticketfieldslayout-col-th { width: 20% }
.ticketfieldslayout-col-td { width: 30% }
.ticketfieldslayout-foldable :link,
.ticketfieldslayout-foldable :visited { padding-left: 16px }
tbody.ticketfieldslayout-collapsed tr { display: none }
tbody.ticketfieldslayout-collapsed tr.ticketfieldslayout-toggle { display: table-row }

